assets/main.CSS
/* Change the font */
body {
    font-family: "JetBrains Mono", monospace;
    font-size: large;
    line-height: 180%;

}

a {
    color: blue;
}

a:visited {
    color: blue;
}

/*
Header for the thesis
*/
.header-chapter-title{
    font-weight: bolder;
    font-size: large;
    color: darkslategray;
}

.subheader1{
    font-weight: bold;
    font-size: large;
    color: slategray;
}

.subheader2{
    font-weight: normal;
    font-size: large;
    color: lightslategray;
}


/* Change the appearnce of the header for the titel of the page at the top 
currently also include the header of the name in the credits.html*/
.top-page-header {
    font-weight: normal;
    text-align: center;
}

/*
Essay and thesis page settings 
*/

.writings p{
    margin-bottom: 3rem; /* Change the spacing between paragraphs */
}

.writings{
    max-width: 80ch; /* Change the maximal width of the lines */
}

/* centers all block in the body horizontally */
.main-body-layout{
    display: flex;
    flex-direction: column;
    align-items: center;
}

/* 
Index page settings 
*/

.index-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 90vh;
}


.index-content section {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
}

.left-links{
    height: 100vh;       
    display: flex;
    flex-direction: column; 
    justify-content: center;
    align-items: center;
    margin-left: 10%;
}

.right-links{
    height: 100vh;       
    display: flex;
    flex-direction: column; 
    justify-content: center;
    align-items: center;
    margin-right: 10%;
    text-align: right;
}

.right-links li{
    padding: 0.1rem;
}


nav li {
    list-style: none;
    margin: 1.25rem 0;
}

.ascii-art {
    margin: 8vh auto;
    display: block;
    width: max-content;
    line-height: 100%;
}

.prologue-epilogue{
    padding: 2rem 0; 
}



/* 
Navigatonal footer
*/

.footer-nav {
    width: 80%; /* adjust the width of the total footer*/
    margin-top: 6rem;
    padding: 2rem;

    display: flex;
    align-items: flex-end; /* aligns prologue and epilogue on same row */
}

.left-nav {
    display: flex;
    flex-direction: column;
}

.middle-links {
    flex: 1;
    display: flex;
    justify-content: space-evenly;
}


.home-footer-button{
    margin-bottom: 1.5rem; /* adjust the spaceing between the home button and the prologue */
}

.current-page { 
    visibility: hidden; /* hides the link to the current page  */
    pointer-events: none; /* makes hidden link unclickable  */
}

.name-for-index{
    text-align: right;
    margin-right: 5%;
    margin-top: -5%;

}


/* 
First page
*/


.index-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 90vh;
}


.front-page-text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    margin-left: 10%;
}

.front-page-text article {
    margin-bottom: 3rem;
}


/* 
Glossary 
*/
.glossary-section {
    width: 80%;
    padding: 2rem;
}

.glossary-entry {
    display: grid;
    grid-template-columns: 10rem 1fr;
    gap: 10rem; /* adjust gap between title and text */
    align-items: start;
    margin-bottom: 1.5rem;
    max-width: 150ch; /* adjust the max charaters displayed on a line */
}

.glossary-entry h4 {
    margin: 0;
}

.glossary-entry p {
    margin: 0;
}

/* 
images 
*/


.still-image {
    float: left;
    width: 50%;
    margin-left: 0;
    margin-right: 2%;
    margin-top: 2%;
    margin-bottom: 0.15%;
}

.still-image img {
    width: 100%;
    display: block;
}

.still-image figcaption {
    color: #666;
    margin-top: 0.5%;
    font-size: small;
    margin-bottom: 0%;
    text-align: center;

}

/* 
references  
*/


.chapter-references p {
    margin: 1% 0;
    font-size: small;
    color: #666;
}

.chapter-references{
    margin-bottom: 6%;
}

.ref-number {
    display: inline-block;
    width: 8%;
    
}

sup {
  color:#666;
  font-size: x-small;
}

